# rust_shopee

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: rust-clippy.yml
migrations/: 20231130000000_create_shop_table.sql  20231221000000_create_products_categories.sql
src/: main.rs
src/config/: db.rs
src/controllers/: category.rs  mod.rs  shop.rs
src/middlewares/: auth.rs
src/models/: category.rs  mod.rs  product.rs  product_category.rs  shop.rs
