[package]
name = "shop-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "migrate"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
env_logger = "0.10"
log = "0.4"
jsonwebtoken = "9.2"
bcrypt = "0.15"
futures = "0.3"
validator = { version = "0.16", features = ["derive"] }
lazy_static = "1.4"
regex = "1.10"
